# page_replacement_simulator

./: .gitignore  CMakeLists.txt  CPSC-457-A2.xlsx  README.md  cpsca1input.csv  flake.nix  run.sh
src/executable/: CMakeLists.txt
src/executable/src/: main.c
src/graphing/: CMakeLists.txt
src/graphing/src/: main.c
src/page/: CMakeLists.txt
src/page/include/: page.h
src/page/src/: page.c
src/process/: CMakeLists.txt
src/process/include/: pid_record.h
src/process/src/: pid_record.c
src/scheduler/: CMakeLists.txt
src/scheduler/include/: scheduler.h
src/scheduler/src/: scheduler.c
src/simulator/: CMakeLists.txt
src/simulator/include/: reg.h  simulator.h
src/simulator/src/: reg.c  simulator.c
src/test/: CMakeLists.txt  test1.csv  test2.csv
src/test/src/: test.c
